--- a/democustom/app/src/main/res/layout/activity_main.xml
+++ b/democustom/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.app.custom.myapplication.MainActivity">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scrollbars="none"
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
@@ -19,7 +29,17 @@
             android:gravity="center"
             android:onClick="onclick"
             />
+        <Button
+            android:id="@+id/jishi"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="倒计时"
+            android:gravity="center"
+            android:onClick="onclick"
+            android:layout_marginLeft="10dp"
+            />
     </LinearLayout>
 
-
+ </LinearLayout>
+    </ScrollView>
 </LinearLayout>
